src/index.css
/* GENERAL */

* {
  box-sizing: border-box;
}

body {
  margin: 0;
  font-family: 'Inter', 'sans-serif';
}

a {
  color: #918E9B;
  font-weight: 400;
  font-size: 11px;
}

/* NAVBAR */


.navbar-container{
  display: flex;
  background-color: #F55A5A;
  justify-content: center;
  align-items: center;
  gap: 7px;
}
.logo{
  width: 24px;
}

.navbar-title{
  font-weight: 500;
  font-size: 15px;
  color: white;
}

/* TRAVEL */

.travel-section{
  display: flex;
  flex-direction: column;
  margin: 0 40px;
}

.travel-container{
  margin-top: 35px;
  display: flex;
  flex-direction: row;
  gap: 15px;
  padding-bottom: 19px;
  border-bottom: 1px solid #F5F5F5;
}
.travel-img{
  max-width: 125px;
  width: 100%;
  height: 169px;

  border-radius: 5px;
}

.travel-info{
  padding: 5px;
  max-height: 169px;
}

.pin{
  max-width: 7px;
  margin-right: 5px;
}

.travel-location{
font-size: 11px;
font-weight: 400;
margin-right: 15px;
text-transform: uppercase
}

.travel-title{
font-size: 25px;
font-weight: 700;
margin: 0;
margin-top: 7px;
margin-bottom: 25px;
}

.travel-date{
font-size: 10px;
font-weight: 700;
}

.travel-description{
font-size: 11px;
font-weight: 400;
}

